cmake_minimum_required(VERSION 3.22)
project(cppLearning)

set(CMAKE_CXX_STANDARD 14)

include_directories(cpp_plus_main/global_area)


add_executable(test test.cpp)

add_executable(global_area cpp_plus_main/global_area/global_area.cpp)
add_executable(stack_area cpp_plus_main/stack_area/stack_area.cpp)
add_executable(heap_area cpp_plus_main/heap_area/heap_area.cpp)
add_executable(reference cpp_plus_main/reference/reference.cpp)
add_executable(func_promote cpp_plus_main/function/func_promote.cpp)
add_executable(func_placeholer cpp_plus_main/function_placeholder/func_placeholer.cpp)
add_executable(func_overload cpp_plus_main/function_overload/func_overload.cpp)
add_executable(circle cpp_plus_main/object/circle/circle.cpp)
add_executable(cube cpp_plus_main/object/cube/cube.cpp)
add_executable(point_circle cpp_plus_main/object/point_circle/point_circle.cpp)
add_executable(static_func cpp_plus_main/static_func/static_func.cpp)

add_executable(member_variable_func_position cpp_plus_main/static_func/member_variable_func_position.cpp)

add_executable(cpp_this cpp_plus_main/cpp_this/cpp_this.cpp)
add_executable(null_point cpp_plus_main/null_point/null_point.cpp)
add_executable(cpp_friend cpp_plus_main/cpp_friend/cpp_friend.cpp)
add_executable(operateOverLoad cpp_plus_main/operator_overload/operateOverLoad.cpp)
add_executable(func_operator_overload cpp_plus_main/func_operator_overload/func_operator_overload.cpp)
add_executable(object_extends cpp_plus_main/object_extends/object_extends.cpp)
add_executable(extends_model cpp_plus_main/object_extends/extends_model.cpp)
add_executable(extend_construct_deconstruct_sort cpp_plus_main/object_extends/extend_construct_deconstruct_sort.cpp)
add_executable(extends_same_name_membe_property cpp_plus_main/object_extends/extends_same_name_membe_property.cpp)
add_executable(multiple_extends cpp_plus_main/object_extends/multiple_extends.cpp)
add_executable(static_polymorphism cpp_plus_main/object_extends/polymorphism/static_polymorphism.cpp)
add_executable(dynamic_polymorphism cpp_plus_main/object_extends/polymorphism/dynamic_polymorphism.cpp)

add_executable(rwFile cpp_plus_main/readAndwriteFile/rwFile.cpp)
add_executable(template_1 cpp_plus_main/stl/func_template_1.cpp)
add_executable(class_template cpp_plus_main/stl/class_template.cpp)
add_executable(Person cpp_plus_main/stl/Person.cpp)
add_executable(class_template_friend_func cpp_plus_main/stl/class_template_friend_func.cpp)